src/objects/Fundraising_Event_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Display__c</fullName>
        <formula>IF(ISBLANK(Registrant__c), 
Email__c,
Registrant__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Display__c</fullName>
        <formula>IF(ISBLANK(Registrant__c), 
First_Name__c,
Registrant__r.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fundraising_Event__c</fullName>
        <label>Funraise Event</label>
        <referenceTo>Fundraising_Event__c</referenceTo>
        <relationshipLabel>Funraise Event Registrations</relationshipLabel>
        <relationshipName>Funraise_Event_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Guest_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest Of</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funraise Event Registrations (Guest Of)</relationshipLabel>
        <relationshipName>Funraise_Event_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Transaction_ID__c</fullName>
        <label>Gift Transaction ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Display__c</fullName>
        <formula>IF(ISBLANK(Registrant__c), 
Last_Name__c,
Registrant__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Display__c</fullName>
        <formula>IF(ISBLANK(Registrant__c), 
Phone__c,
Registrant__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registrant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funraise Event Registrations (Registrant)</relationshipLabel>
        <relationshipName>Funraise_Event_Registrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_Amount__c</fullName>
        <label>Ticket Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticket_Name__c</fullName>
        <label>Ticket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Tax_Deductible_Amount__c</fullName>
        <label>Ticket Tax Deductible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funraise Event Registrations</relationshipLabel>
        <relationshipName>Funraise_Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fr_ID__c</fullName>
        <externalId>true</externalId>
        <label>Funraise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funraise Event Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ticket_Amount__c</columns>
        <columns>Ticket_Name__c</columns>
        <columns>Fundraising_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funraise Event Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funraise Event Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>